[package]
name = "async-read-length-limit"
version = "0.1.1"
edition = "2021"
authors = ["Jacob Rothstein <hi@jbr.me>"]
description = "limit the size of an async read"
documentation = "https://docs.rs/async-read-length-limit"
repository = "https://github.com/jbr/async-read-length-limit"
license = "MIT OR Apache-2.0"
keyword = ["async", "async-read", "futures"]
categories = ["asynchronous"]


[dependencies]
futures-lite = "1.13.0"
pin-project-lite = "0.2.10"

[dev-dependencies]
fastrand = "2.0.0"
